--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     ]
   },
   "devDependencies": {
+    "husky": "^6.0.0",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
     "proptypes": "^1.1.0"
   }
 }
